# OpenFace

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
exe/FeatureExtractionLib/: CMakeLists.txt  FeatureExtractionLib.cpp
jupyter/: Test.ipynb
lib/local/FaceAnalyser/: CMakeLists.txt
lib/local/GazeAnalyser/: CMakeLists.txt
lib/local/Utilities/: CMakeLists.txt
